# mq_multi_bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml
src/: amqp.rs  bridge.rs  config.rs  consumers.rs  deduplication.rs  file.rs  http.rs  kafka.rs  lib.rs  main.rs  mod.rs  model.rs  mqtt.rs  nats.rs  old_lib.rs  route_runner.rs  sinks.rs  sources.rs  static_response.rs  store.rs
src/endpoints/: amqp.rs  file.rs  http.rs  kafka.rs  memory.rs  mod.rs  mqtt.rs  nats.rs  static_endpoint.rs  static_response.rs
tests/: README.md  all_endpoints.rs  amqp.rs  common.rs  config.all.yml  config.amqp.yml  config.http2file.yml  config.integration.yml  config.kafka.yml  config.mqtt.yml  config.nats.yml  docker-compose.integration.yml  docker-compose.mqtt.yml  integration_test.rs  kafka.rs  mqtt.rs  nats.rs
tests/integration/: all_endpoints.rs  amqp.rs  common.rs  kafka.rs  mod.rs  mqtt.rs  nats.rs
