[package]
name = "mq-bridge-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mq-bridge-app"
path = "src/main.rs"

[profile.release]
# Link-Time Optimization.
# lto = true
# Abort on panic to reduce binary size.
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true


[dependencies]
mq-bridge = { git = "https://github.com/marcomq/mq-bridge", features = ["full"] }

config = { version = "0.15" }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# Error handling
anyhow = "1.0.100"

# Logging & Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
metrics = { version = "0.24" }
metrics-exporter-prometheus = "0.18.1"

[features]
default = []
integration-test = []

